--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     }
 
     // ====================
-    // 4. Asignar color según tipo
+    // 4. Asignar color según tipos
     // ====================
     function getColor(tipo) {
       switch (tipo) {
